added Dave Bryant's latest implementation of NNet